<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Front">

    <LinearLayout
        android:id="@+id/baseBackground"
        android:layout_width="match_parent"
        android:layout_height="248dp"
        android:background="@drawable/front_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,Orientation" />

    <TextView
        android:id="@+id/quizTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz"
        android:textSize="58sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/animatedLogoCardView"
        android:layout_width="180dp"
        android:layout_height="90dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="21dp"
        app:layout_constraintTop_toTopOf="@+id/BaseCardView"
        app:layout_constraintBottom_toTopOf="@+id/BaseCardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/top_card_background">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottieQuizAnimation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:lottie_autoPlay="true"
                app:lottie_fileName="quiz_animation.json"
                app:lottie_loop="true"
                android:scaleType="centerCrop"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/BaseCardView"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/quizTextView">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/top_card_background">

            <TextView
                android:id="@+id/mainPageTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_page"
                android:textStyle="bold"
                android:textSize="40sp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:textColor="@color/black"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/questionsButton"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:text="@string/questions"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:textAllCaps="false"
                android:textColor="@color/white"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/RateUsButton"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:text="@string/rate_us"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:textColor="@color/white"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/appInfoCardView"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardElevation="21dp"
        android:layout_margin="30dp"
        app:layout_constraintTop_toBottomOf="@+id/BaseCardView"
        app:layout_constraintBottom_toBottomOf="@+id/BaseCardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@drawable/top_card_background">

            <TextView
                android:id="@+id/versionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_version"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/appDescriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_description"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/contactTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_info"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginTop="8dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>